--- a/fluentd-deployment.yml
+++ b/fluentd-deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: fluentd
-          image: h3poteto/k8s-fluentd:latest
+          image: h3poteto/k8s-fluentd:0.1.0
           ports:
             - name: tcp
               containerPort: 24224
