Add fluent configure to upload log to s3

--- a/fluent.conf
+++ b/fluent.conf
@@ -1,8 +1,41 @@
 <source>
-  type forward
-  port 24224
-  bind 0.0.0.0
+  @type  forward
+  @id    input1
+  @label @mainstream
+  port  24224
 </source>
-<match docker.**>
-  type stdout
-</match>
+
+<filter **>
+  @type stdout
+</filter>
+
+<label @mainstream>
+  <match docker.**>
+    @type s3
+
+    s3_bucket h3poteto-fluentd-log
+    s3_region ap-northeast-1
+
+    <instance_profile_credentials>
+    </instance_profile_credentials>
+
+    <buffer>
+      @type file
+      path /fluentd/buffer/docker
+      chunk_limit_size 256MB
+      flush_mode interval
+      flush_interval 120
+      flush_at_shutdown false
+    </buffer>
+  </match>
+  <match **>
+    @type file
+    @id   output1
+    path         /fluentd/log/data.*.log
+    symlink_path /fluentd/log/data.log
+    append       true
+    time_slice_format %Y%m%d
+    time_slice_wait   10m
+    time_format       %Y%m%dT%H%M%S%z
+  </match>
+</label>
