Flush logs at shutdown

--- a/fluent.conf
+++ b/fluent.conf
@@ -25,7 +25,7 @@
       chunk_limit_size 256MB
       flush_mode interval
       flush_interval 120
-      flush_at_shutdown false
+      flush_at_shutdown true
     </buffer>
   </match>
   <match **>
