--- a/fluent.conf
+++ b/fluent.conf
@@ -15,6 +15,10 @@
 
     s3_bucket h3poteto-fluentd-log
     s3_region ap-northeast-1
+    tag docker
+    path logs/${tag}/%Y/%m/%d/%H/
+    s3_object_key_format %{path}%{time_slice_format}_%{index}.%{file_extension}
+    time_slice_format %Y%m%d-%H%M%
 
     <instance_profile_credentials>
     </instance_profile_credentials>
@@ -22,9 +26,9 @@
     <buffer>
       @type file
       path /fluentd/buffer/docker
-      chunk_limit_size 256MB
-      flush_mode interval
-      flush_interval 120
+      timekey 120 # 2 minutes partition
+      timekey_wait 1m
+      timekey_use_utc true # use utc
       flush_at_shutdown true
     </buffer>
   </match>
