Fix fluent conf

--- a/fluent.conf
+++ b/fluent.conf
@@ -12,18 +12,16 @@
 <label @mainstream>
   <match docker.**>
     @type s3
-
     s3_bucket h3poteto-fluentd-log
     s3_region ap-northeast-1
-    tag docker
-    path logs/${tag}/%Y/%m/%d/%H/
-    s3_object_key_format %{path}%{time_slice_format}_%{index}.%{file_extension}
-    time_slice_format %Y%m%d-%H%M%
+    path logs/docker/%Y/%m/%d/%H/
+    s3_object_key_format %{path}%{time_slice}_%{index}.%{file_extension}
+    time_slice_format %Y%m%d-%H:%M
 
     <instance_profile_credentials>
     </instance_profile_credentials>
 
-    <buffer>
+    <buffer tag,time>
       @type file
       path /fluentd/buffer/docker
       timekey 120 # 2 minutes partition
@@ -31,15 +29,5 @@
       timekey_use_utc true # use utc
       flush_at_shutdown true
     </buffer>
-  </match>
-  <match **>
-    @type file
-    @id   output1
-    path         /fluentd/log/data.*.log
-    symlink_path /fluentd/log/data.log
-    append       true
-    time_slice_format %Y%m%d
-    time_slice_wait   10m
-    time_format       %Y%m%dT%H%M%S%z
   </match>
 </label>
